# tau

./: .gitignore  DECORATOR_API.md  HOW_TO_TEST_EXTENSION.md  IMPROVEMENTS.md  README.md  demo.py  example_bugs.py  example_llm.py  main.py  requirements.txt  start_server.sh  test_api.py  verification_results.json  verify_safe.py
.claude/: settings.local.json
examples/: demo_cached.py  demo_safe_auto.py  finance_examples.py  safe_functions.py  simple_safe.py
proofs/: config.json  index.json
tau/: __init__.py  api.py  decorators.py  parser.py  server.py  verify.py
tau-decorators/: README.md  pyproject.toml
tau-decorators/tau_decorators/: __init__.py  decorators.py
tau-vscode/: README.md  package-lock.json  package.json
tau-vscode/src/: codeLensProvider.ts  completionProvider.ts  decorationProvider.ts  diagnosticsManager.ts  extension.ts  proofCache.ts  tauClient.ts
tau/core/: config.py  models.py  transpiler.py
tau/generators/: lean.py  whyml.py
tau/llm/: __init__.py  feedback_loop.py  spec_generator.py
tau/output/: __init__.py  json_formatter.py
tau/proofs/: __init__.py  hasher.py  index.json  manager.py
tau/server/: __init__.py  app.py  client.py  models.py
tau/tests/: test_expressions.py  test_transpiler.py
tau/translators/: expressions.py  statements.py
tau/utils/: files.py  hashing.py  verification.py
tests/: test_api.py  test_decorators.py  test_proof_integration.py  test_proofs.py  test_server.py
